--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack",
+    "build:server": "tsc -w -p tsconfig.server.json",
     "start": "npm run build && webpack-dev-server --port=8000"
   },
   "repository": {
@@ -18,11 +19,20 @@
   },
   "homepage": "https://github.com/gndw/remi-online#readme",
   "devDependencies": {
-    "webpack-dev-server": "^2.11.0",
+    "raw-loader": "^0.5.1",
     "webpack": "^3.4.1",
-    "raw-loader": "^0.5.1"
+    "webpack-dev-server": "^2.11.0"
   },
   "dependencies": {
-    "phaser": "^3.3.0"
+    "@types/uuid": "^9.0.2",
+    "phaser": "^3.3.0",
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.7.2",
+    "typescript": "^5.2.2",
+    "uuid": "^9.0.0"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.7",
+    "utf-8-validate": "^5.0.10"
   }
 }
